# qontak-mcp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIELD_LIMITATIONS.md  LICENSE  MANIFEST.in  Qontak CRM OpenAPI.postman_collection.json  README.md  REDIS_IMPLEMENTATION.md  SECURITY.md  pyproject.toml
.agents/skills/qontak-mcp-developer/: SKILL.md
.agents/skills/qontak-mcp-developer/references/: architecture.md  dynamic_fields.md  models.md  testing.md  token_stores.md  tool_patterns.md  usage_guide.md
.agents/skills/qontak-mcp-developer/references/domains/: contacts.md  deals.md
.agents/skills/qontak-mcp-developer/scripts/: add_tool.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/qontak_mcp/: __init__.py  auth.py  client.py  errors.py  logging.py  models.py  rate_limit.py  server.py  validation.py
src/qontak_mcp/stores/: __init__.py  base.py  env.py  redis.py  vault.py
src/qontak_mcp/tools/: __init__.py  companies.py  contacts.py  deals.py  notes.py  products.py  products_association.py  tasks.py  tickets.py
tests/: conftest.py  test_auth.py  test_client.py  test_errors.py  test_logging.py  test_models.py  test_rate_limit.py  test_server.py  test_tools_poc.py  test_validation.py  test_version.py
tests/integration/: README.md  __init__.py  conftest.py  test_companies_integration.py  test_contacts_integration.py  test_deals_integration.py  test_end_to_end.py  test_notes_integration.py  test_products_association_integration.py  test_products_integration.py  test_tasks_integration.py  test_tickets_integration.py
tests/stores/: test_env.py  test_redis.py  test_stores_init.py
tests/tools/: company_fixtures.py  conftest.py  contact_fixtures.py  deal_fixtures.py  note_fixtures.py  product_association_fixtures.py  product_fixtures.py  test_companies.py  test_companies_comprehensive.py  test_contacts.py  test_deals.py  test_notes.py  test_notes_comprehensive.py  test_products.py  test_products_association.py  test_products_association_comprehensive.py  test_products_comprehensive.py  test_tasks.py  test_tickets.py
